classDiagram
    direction TB

    %% ── Protocols ─────────────────────────────────────────────────────────
    class EncounterParticipant {
        <<protocol>>
        +UUID id
    }

    class CombatParticipant {
        <<protocol>>
        +Int currentHP
        +Int maxHP
        +Int currentStress
        +Int maxStress
        +Set~Condition~ conditions
    }

    EncounterParticipant <|-- CombatParticipant

    %% ── Session state value types (nonisolated) ───────────────────────────
    class AdversaryState {
        +UUID id
        +String adversaryID
        +String? customName
        +Int maxHP
        +Int maxStress
        +Int currentHP
        +Int currentStress
        +Bool isDefeated
        +Set~Condition~ conditions
        +init(from: Adversary, customName:)
        +applying(currentHP:currentStress:isDefeated:conditions:) AdversaryState
    }

    class PlayerState {
        +UUID id
        +String name
        +Int maxHP
        +Int currentHP
        +Int maxStress
        +Int currentStress
        +Int evasion
        +Int thresholdMajor
        +Int thresholdSevere
        +Int armorSlots
        +Int currentArmorSlots
        +Set~Condition~ conditions
        +applying(currentHP:currentStress:currentArmorSlots:conditions:) PlayerState
    }

    class EnvironmentState {
        +UUID id
        +String environmentID
        +Bool isActive
        +applying(isActive:) EnvironmentState
    }

    CombatParticipant <|.. AdversaryState
    CombatParticipant <|.. PlayerState
    EncounterParticipant <|.. EnvironmentState
